--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE>
-
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            Odin Recipes
-        </title>
+        <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>
-            Odin Recipes
-        </h1>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/pancakes.html">Pancakes</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/scones.html">Scones</a></li>
+        </ul>
     </body>
 </html>
