--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -2,14 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            Pancakes
-        </title>
+        <title>Pancakes</title>
     </head>
     <body>
-        <h1>
-            Pancakes
-        </h1>
-        <a href="../index.html">Home</a>
+        <h1>Pancakes</h1>
+        <img src="../img/pancakes.jpg" alt="Picture of pancakes" width="500">
+        <h2>Description</h2>
+        <p>Recipe for yummy pancakes.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Flour</li>
+            <li>Baking powder</li>
+            <li>Sugar</li>
+            <li>Salt</li>
+            <li>Milk</li>
+            <li>Butter</li>
+            <li>Egg</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Sift the dry ingredients together.</li>
+            <li>Make a well, then add the wet ingredients. Stir to combine.</li>
+            <li>Scoop the batter onto a hot griddle och pan.</li>
+            <li>Cook for two to three minutes, then flip.</li>
+            <li>Continue cooking until brow on both sides.</li>
+        </ol>
+        <p><a href="../index.html">Home</a></p>
     </body>
 </html>
