--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,30 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>Pancakes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Pancakes</h1>
-        <img src="../img/pancakes.jpg" alt="Picture of pancakes" width="500">
-        <h2>Description</h2>
-        <p>Recipe for yummy pancakes.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Flour</li>
-            <li>Baking powder</li>
-            <li>Sugar</li>
-            <li>Salt</li>
-            <li>Milk</li>
-            <li>Butter</li>
-            <li>Egg</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Sift the dry ingredients together.</li>
-            <li>Make a well, then add the wet ingredients. Stir to combine.</li>
-            <li>Scoop the batter onto a hot griddle och pan.</li>
-            <li>Cook for two to three minutes, then flip.</li>
-            <li>Continue cooking until brow on both sides.</li>
-        </ol>
-        <p><a href="../index.html">Home</a></p>
+        <div class="main">
+            <h1 class="title">Pancakes</h1>
+            <img class="image" src="../img/pancakes.jpg" alt="Picture of pancakes" width="500">
+            <h2 class="title">Description</h2>
+            <p class="content">Recipe for yummy pancakes.</p>
+            <h2 class="title">Ingredients</h2>
+            <ul class="list">
+                <li>Flour</li>
+                <li>Baking powder</li>
+                <li>Sugar</li>
+                <li>Salt</li>
+                <li>Milk</li>
+                <li>Butter</li>
+                <li>Egg</li>
+            </ul>
+            <h2 class="title">Steps</h2>
+            <ol class="list">
+                <li>Sift the dry ingredients together.</li>
+                <li>Make a well, then add the wet ingredients. Stir to combine.</li>
+                <li>Scoop the batter onto a hot griddle och pan.</li>
+                <li>Cook for two to three minutes, then flip.</li>
+                <li>Continue cooking until brow on both sides.</li>
+            </ol>
+            <p class="content"><a href="../index.html">Home</a></p>
+        </div>
+
     </body>
 </html>
