--- a/recipes/scones.html
+++ b/recipes/scones.html
@@ -3,30 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>Scones</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Scones</h1>
-        <img src="../img/scones.jpg" alt="Picture of scones" width="500">
-        <h2>Description</h2>
-        <p>Simple scones.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Flour</li>
-            <li>Sugar</li>
-            <li>Baking powder</li>
-            <li>Salt</li>
-            <li>Butter</li>
-            <li>Milk</li>
-            <li>Egg</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Mix the dry ingredients, then work the butter into the dough using two knives or a pastry blender.</li>
-            <li>Whisk the milk and egg togerther, then stir the egg mixture into the flour mixture.</li>
-            <li>Transfer the dough to a floured surface and knead briefly.</li>
-            <li>Pat or roll the dough into a round and cut into triangles using a knife or a bench scraper.</li>
-            <li>Bake the scones in a preheated oven until golden brown</li>
-        </ol>
-        <p><a href="../index.html">Home</a></p>
+        <div class="main">
+            <h1 class="title">Scones</h1>
+            <img class="image" src="../img/scones.jpg" alt="Picture of scones" width="500">
+            <h2 class="title">Description</h2>
+            <p class="content">Simple scones.</p>
+            <h2 class="title">Ingredients</h2>
+            <ul class="list">
+                <li>Flour</li>
+                <li>Sugar</li>
+                <li>Baking powder</li>
+                <li>Salt</li>
+                <li>Butter</li>
+                <li>Milk</li>
+                <li>Egg</li>
+            </ul>
+            <h2 class="title">Steps</h2>
+            <ol class="list">
+                <li>Mix the dry ingredients, then work the butter into the dough using two knives or a pastry blender.</li>
+                <li>Whisk the milk and egg togerther, then stir the egg mixture into the flour mixture.</li>
+                <li>Transfer the dough to a floured surface and knead briefly.</li>
+                <li>Pat or roll the dough into a round and cut into triangles using a knife or a bench scraper.</li>
+                <li>Bake the scones in a preheated oven until golden brown</li>
+            </ol>
+            <p class="content"c><a href="../index.html">Home</a></p>
+        </div>
+
     </body>
 </html>
