--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/pancakes.html">Pancakes</a></li>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/scones.html">Scones</a></li>
-        </ul>
+        <div class="main">
+            <h1 class="title">Odin Recipes</h1>
+            <ul class="list">
+                <li><a href="recipes/pancakes.html">Pancakes</a></li>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/scones.html">Scones</a></li>
+            </ul>
+        </div>
+
     </body>
 </html>
